@@ -4,10 +4,11 @@ jalv (1.6.1) unstable;
   * Add jalv -i option to ignore stdin for background use
   * Fix Jack deactivation
   * Fix potential crash when closed with worker (thanks JP Cimalando)
+  * Fix potential hang after Ctrl-c in console interface (thanks Laxmi Devi)
   * Add support for underscore in port names on command line
     (thanks Jośe Fernando Moyano)
 
- -- David Robillard <d@drobilla.net>  Thu, 20 Sep 2018 09:21:15 +0200
+ -- David Robillard <d@drobilla.net>  Thu, 20 Sep 2018 09:27:15 +0200
 
 jalv (1.6.0) stable;
 
